[workspace]
resolver = "2"
members = [
    "contracts/*",
]

[workspace.dependencies]
soroban-sdk = "22.0.11"
serde = { version = "1.0", default-features = false, features = ["derive"] }
toml = { version = "0.8", default-features = false }
proptest = "1.5.0"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
