[package]
name = "crowdfund"
version = "0.2.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }

[features]
default = []
# Opt-in: legacy test modules that need API/import updates to match the current contract and SDK.
legacy_crowdfund_tests = []

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
proptest = { workspace = true }
